--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <![endif]-->
     <script src="scripts/vendor.4c173da6.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
+    <script src="scripts/DeviceMod.js"></script>
 	
 </body>
 </html>
