--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 	<link rel="stylesheet" href="styles/vendor.0cc3d200.css">
 	<link rel="stylesheet" href="styles/main.1be6a35c.css">
 	<link rel="stylesheet" href="styles/custom.css">
+	<link rel="stylesheet" href="styles/toaster.min.css">
 </head>
 <body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm">
 <!--body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm" ng-class="{'header-fixed': main.settings.headerFixed, 'header-static': !main.settings.headerFixed, 'aside-fixed': main.settings.asideFixed, 'aside-static': !main.settings.asideFixed, 'rightbar-show': main.settings.rightbarShow, 'rightbar-hidden': !main.settings.rightbarShow}"-->
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+	<toaster-container></toaster-container>
 
     <!-- Application content -->
     <div id="wrap" ui-view autoscroll="false"></div>
@@ -44,7 +46,9 @@
     <!--[if lt IE 9]>
     <script src="scripts/oldieshim.f2dbeece.js"></script>
     <![endif]-->
+    <script src="scripts/hsOptions.js"></script>
     <script src="scripts/vendor.4c173da6.js"></script>
+    <script src="scripts/toaster.min.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
     <script src="scripts/DeviceMod.js"></script>
 	
