--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <script src="scripts/toaster.min.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
     <script src="scripts/DeviceMod.js"></script>
+    <script src="scripts/DoorsMod.js"></script>
+    <script src="scripts/UsersMod.js"></script>
 	
 </body>
 </html>
