Added client side validation and unassign user group

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="styles/main.1be6a35c.css">
 	<link rel="stylesheet" href="styles/custom.css">
 	<link rel="stylesheet" href="styles/toaster.min.css">
+	<link rel="stylesheet" href="styles/screen.css">
 </head>
 <body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm">
 <!--body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm" ng-class="{'header-fixed': main.settings.headerFixed, 'header-static': !main.settings.headerFixed, 'aside-fixed': main.settings.asideFixed, 'aside-static': !main.settings.asideFixed, 'rightbar-show': main.settings.rightbarShow, 'rightbar-hidden': !main.settings.rightbarShow}"-->
@@ -53,6 +54,8 @@
     <script src="scripts/DeviceMod.js"></script>
     <script src="scripts/DoorsMod.js"></script>
     <script src="scripts/UsersMod.js"></script>
+    <script src="scripts/jquery.validate.js"></script>
+    <script src="scripts/angular-validate.js"></script>
 	
 </body>
 </html>
