Assign door to device

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <script src="scripts/DeviceMod.js"></script>
     <script src="scripts/DoorsMod.js"></script>
     <script src="scripts/UsersMod.js"></script>
+    <script src="scripts/SettingMod.js"></script>
     <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
 	
