--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="scripts/DoorsMod.js"></script>
     <script src="scripts/UsersMod.js"></script>
     <script src="scripts/SettingMod.js"></script>
+    <script src="scripts/DoorGroupMod.js"></script>
     <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
 	
