--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <script src="scripts/UsersMod.js"></script>
     <script src="scripts/SettingMod.js"></script>
     <script src="scripts/DoorGroupMod.js"></script>
+    <script src="scripts/TechnicianMod.js"></script>
     <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
 	
