Added file upload in user

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <script src="scripts/SettingMod.js"></script>
     <script src="scripts/DoorGroupMod.js"></script>
     <script src="scripts/TechnicianMod.js"></script>
+    <script src="scripts/Admin.js"></script>
     <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
 	
