--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     <script src="scripts/Admin.js"></script>
     <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
-	
+	<script src="scripts/facility.js"></script>
 </body>
 </html>
