--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<link rel="stylesheet" href="styles/vendor.0cc3d200.css">
 	<link rel="stylesheet" href="styles/main.1be6a35c.css">
 	<link rel="stylesheet" href="styles/custom.css">
-	<link rel="stylesheet" href="styles/toaster.min.css">
+	<link rel="stylesheet" href="styles/toastr.min.css">
 <!-- <link rel="stylesheet" href="styles/screen.css"> -->
 </head>
 <body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm">
@@ -43,7 +43,7 @@
     <!-- Page Loader -->
     <div id="pageloader" page-loader></div>
    
-    <script src='//maps.googleapis.com/maps/api/js?libraries=weather,geometry,visualization,places,drawing&sensor=false&language=en&v=3.17'></script>
+    <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyDB3LbvjIH_gtIOmNkYG1osHnKjaJKmBvE&libraries=weather,geometry,visualization,places,drawing&sensor=false&language=en&v=3.17'></script>
     <!--[if lt IE 9]>
     <script src="scripts/oldieshim.f2dbeece.js"></script>
     <![endif]-->
