create config file

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="scripts/vendor.4c173da6.js"></script>
     <script src="scripts/toaster.min.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
+    <script src="scripts/config.js"></script>
     <script src="scripts/DeviceMod.js"></script>
     <script src="scripts/DoorsMod.js"></script>
     <script src="scripts/UsersMod.js"></script>
