Added camera dvr and user edit credentials

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="styles/main.1be6a35c.css">
 	<link rel="stylesheet" href="styles/custom.css">
 	<link rel="stylesheet" href="styles/toastr.min.css">
+	<link rel="stylesheet" href="styles/vxgplayer.css">
 <!-- <link rel="stylesheet" href="styles/screen.css"> -->
 </head>
 <body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm">
@@ -62,5 +63,7 @@
     <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
 	<script src="scripts/facility.js"></script>
+	<script src="scripts/CameraDvr.js"></script>
+	<script src="scripts/vxgplayer.js"></script>
 </body>
 </html>
