--- a/elika-warehouse/index.html
+++ b/elika-warehouse/index.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="styles/main.1be6a35c.css">
 	<link rel="stylesheet" href="styles/custom.css">
 	<link rel="stylesheet" href="styles/toaster.min.css">
+	<link rel="stylesheet" href="styles/loading-bar.css">
 </head>
 <body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm">
     <!--[if lt IE 7]>
@@ -38,7 +39,7 @@
     <div id="wrap" ui-view autoscroll="false"></div>
 
     <!-- Page Loader -->
-    <div id="pageloader" page-loader></div>
+    <!-- <div id="pageloader" page-loader></div> -->
    
     <!--[if lt IE 9]>
     <script src="scripts/oldieshim.f2dbeece.js"></script>
@@ -46,6 +47,7 @@
     <script src="scripts/vendor.4c173da6.js"></script>
     <script src="scripts/toaster.min.js"></script>
 	<script src="scripts/angular-validate.js"></script>
+    <script src="scripts/loading-bar.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
     <script src="scripts/controllers/devices.js"></script>
