--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<link rel="stylesheet" href="styles/main.1be6a35c.css">
 	<link rel="stylesheet" href="styles/custom.css">
 	<link rel="stylesheet" href="styles/toastr.min.css">
-<!-- <link rel="stylesheet" href="styles/screen.css"> -->
+	<link rel="stylesheet" href="styles/loading-bar.css">
 </head>
 <body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm">
 <!--body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm" ng-class="{'header-fixed': main.settings.headerFixed, 'header-static': !main.settings.headerFixed, 'aside-fixed': main.settings.asideFixed, 'aside-static': !main.settings.asideFixed, 'rightbar-show': main.settings.rightbarShow, 'rightbar-hidden': !main.settings.rightbarShow}"-->
@@ -41,7 +41,7 @@
     <div id="wrap" ui-view autoscroll="false"></div>
 
     <!-- Page Loader -->
-    <div id="pageloader" page-loader></div>
+    <!--<div id="pageloader" page-loader></div>-->
    
     <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyDB3LbvjIH_gtIOmNkYG1osHnKjaJKmBvE&libraries=weather,geometry,visualization,places,drawing&sensor=false&language=en&v=3.17'></script>
     <!--[if lt IE 9]>
@@ -50,6 +50,7 @@
     <script src="scripts/hsOptions.js"></script>
     <script src="scripts/vendor.4c173da6.js"></script>
     <script src="scripts/toaster.min.js"></script>
+    <script src="scripts/loading-bar.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
     <script src="scripts/config.js"></script>
     <script src="scripts/DeviceMod.js"></script>
