--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script src="scripts/DoorGroupMod.js"></script>
     <script src="scripts/TechnicianMod.js"></script>
     <script src="scripts/Admin.js"></script>
+    <script src="scripts/schedule.js"></script>
     <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
 	<script src="scripts/facility.js"></script>
