integrated RecordedFeedCameras api to get videos on the behalf of facility id and play on the screen

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <script src="scripts/toaster.min.js"></script>
     <script src="scripts/loading-bar.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
+
+	<!--<script src="scripts/UtilitySvc.js"></script>  &lt;!&ndash;.....Utility Service File&ndash;&gt;-->
+
     <script src="scripts/config.js"></script>
     <script src="scripts/DeviceMod.js"></script>
     <script src="scripts/DoorsMod.js"></script>
