--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <script src="scripts/loading-bar.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
 
-	<!--<script src="scripts/UtilitySvc.js"></script>  &lt;!&ndash;.....Utility Service File&ndash;&gt;-->
+	<script src="scripts/UtilitySvc.js"></script>  <!--.....Utility Service File-->
 
     <script src="scripts/config.js"></script>
     <script src="scripts/DeviceMod.js"></script>
