--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
 	<script src="scripts/facility.js"></script>
+	<script src="scripts/activity.js"></script>
 	<script src="scripts/CameraDvr.js"></script>
 	<script src="scripts/deviceSettings.js"></script>
 	<script src="scripts/vxgplayer.js"></script>
