--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <script src="scripts/toaster.min.js"></script>
     <script src="scripts/loading-bar.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
+    <script src="scripts/forgetpassword.js"></script>
 
 	<script src="scripts/UtilitySvc.js"></script>  <!--.....Utility Service File-->
 
