code optimization for Facility web UI (except User and Schedular module)

--- a/index.html
+++ b/index.html
@@ -56,9 +56,23 @@
     <script src="scripts/vendor.4c173da6.js"></script>
     <script src="scripts/toaster.min.js"></script>
     <script src="scripts/loading-bar.js"></script>
-    <script src="scripts/app.d7ca82ad.js"></script>
 
-	<script src="scripts/UtilitySvc.js"></script>  <!--.....Utility Service File-->
+	<script src="scripts/app.d7ca82ad.js"></script>
+
+	<!--...............Utility Files..................................................-->
+	<script src="scripts/Service/Constants.js"></script>
+	<script src="scripts/Service/UtilitySvc.js"></script>
+	<script src="scripts/Service/dashboardSvc.js"></script>
+	<script src="scripts/Service/facilitiesSvc.js"></script>
+	<script src="scripts/Service/activitiesSvc.js"></script>
+	<script src="scripts/Service/adminSvc.js"></script>
+	<script src="scripts/Service/cameraDVRSvc.js"></script>
+	<script src="scripts/Service/devicesSvc.js"></script>
+	<script src="scripts/Service/doorsSvc.js"></script>
+	<script src="scripts/Service/technicianSvc.js"></script>
+	<!--..............................................................................-->
+
+
 
     <script src="scripts/config.js"></script>
     <script src="scripts/DeviceMod.js"></script>
