--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<script src="scripts/Service/devicesSvc.js"></script>
 	<script src="scripts/Service/doorsSvc.js"></script>
 	<script src="scripts/Service/technicianSvc.js"></script>
+	<script src="scripts/Service/UserSvc.js"></script>
 	<!--..............................................................................-->
 
 
