--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 	<script src="scripts/Service/doorsSvc.js"></script>
 	<script src="scripts/Service/technicianSvc.js"></script>
 	<script src="scripts/Service/UserSvc.js"></script>
+	<script src="scripts/Service/profileSettingsSvc.js"></script>
 	<!--..............................................................................-->
 
 
@@ -92,6 +93,7 @@
 	<script src="scripts/deviceSettings.js"></script>
 	<script src="scripts/vxgplayer.js"></script>
 	<script src="scripts/forgetpassword.js"></script>
+	<script src="scripts/profileSettings.js"></script>
 
 </body>
 </html>
