--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 	<script src="scripts/Service/devicesSvc.js"></script>
 	<script src="scripts/Service/doorsSvc.js"></script>
 	<script src="scripts/Service/technicianSvc.js"></script>
+	<script src="scripts/Service/scheduleSvc.js"></script>
+	<script src="scripts/Service/forgetpasswordSvc.js"></script>
 	<!--..............................................................................-->
 
 
@@ -82,6 +84,7 @@
     <script src="scripts/DoorGroupMod.js"></script>
     <script src="scripts/TechnicianMod.js"></script>
     <script src="scripts/Admin.js"></script>
+    <script src="scripts/userProfile.js"></script>
     <script src="scripts/schedule.js"></script>
     <script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
