resolved bugs as told by anshi and made some code level changes in Usermodule

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="minovateApp" ng-controller="MainCtrl" class="no-js {{containerClass}}">
+<html ng-app="minovateApp" class="no-js {{containerClass}}">
 <head>
 	<meta charset="utf-8">
 	<title>Elika - Web Admin UI</title>
@@ -48,7 +48,7 @@
     <!-- Page Loader -->
     <!--<div id="pageloader" page-loader></div>-->
    
-    <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyDB3LbvjIH_gtIOmNkYG1osHnKjaJKmBvE&libraries=weather,geometry,visualization,places,drawing&sensor=false&language=en&v=3.17'></script>
+    <!--<script src='//maps.googleapis.com/maps/api/js?key=AIzaSyDB3LbvjIH_gtIOmNkYG1osHnKjaJKmBvE&libraries=weather,geometry,visualization,places,drawing&sensor=false&language=en&v=3.17'></script>-->
     <!--[if lt IE 9]>
     <script src="scripts/oldieshim.f2dbeece.js"></script>
     <![endif]-->
