--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-	<toaster-container></toaster-container>
+
+	<!--<toaster-container></toaster-container>-->
+<toaster-container toaster-options="{'limit':1}"></toaster-container>
 
     <!-- Application content -->
     <div id="wrap" ui-view autoscroll="false"></div>
