integrated Holiday schedule add and listing API

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 	<script src="scripts/Service/UserSvc.js"></script>
 	<script src="scripts/Service/profileSettingsSvc.js"></script>
 
+	<script src="scripts/Service/holidayScheduleSvc.js"></script>
+
 	<!--..............................................................................-->
 
 
@@ -102,7 +104,11 @@
 	<script src="scripts/deviceSettings.js"></script>
 	<script src="scripts/vxgplayer.js"></script>
 	<script src="scripts/forgetpassword.js"></script>
+
 	<script src="scripts/profileSettings.js"></script>
+
+	<script src="scripts/holidaySchedule.js"></script>
+
 
 </body>
 </html>
