implemented menu shortcut functionality and resolved some bugs

--- a/index.html
+++ b/index.html
@@ -82,11 +82,16 @@
 
 	<script src="scripts/Service/holidayScheduleSvc.js"></script>
 
+	<script src="scripts/Service/loginSVC.js"></script>
+
+
 	<!--..............................................................................-->
 
 
 
     <script src="scripts/config.js"></script>
+	<script src="scripts/login.js"></script>
+	<script src="scripts/dashboard.js"></script>
     <script src="scripts/DeviceMod.js"></script>
     <script src="scripts/DoorsMod.js"></script>
     <script src="scripts/UsersMod.js"></script>
