--- a/elika-warehouse/index.html
+++ b/elika-warehouse/index.html
@@ -51,6 +51,9 @@
     <script src="scripts/app.d7ca82ad.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
     <script src="scripts/controllers/devices.js"></script>
+    <script src="scripts/controllers/master-admin.js"></script>
+    <script src="scripts/controllers/roles.js"></script>
+    <script src="scripts/controllers/firmware.js"></script>
 	<script src="scripts/vendor/touchspin/jquery.bootstrap-touchspin.js"></script>
 </body>
 </html>
