--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 	<script src="scripts/Service/holidayScheduleSvc.js"></script>
 
 	<script src="scripts/Service/loginSVC.js"></script>
+	<script src="scripts/Service/administratorSvc.js"></script>
 
 
 	<!--..............................................................................-->
@@ -113,6 +114,7 @@
 	<script src="scripts/profileSettings.js"></script>
 
 	<script src="scripts/holidaySchedule.js"></script>
+	<script src="scripts/administrator.js"></script>
 
 
 </body>
