--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <!--[if lt IE 9]>
     <script src="scripts/oldieshim.f2dbeece.js"></script>
     <![endif]-->
+	<script src="scripts/lib/jquery.min.js"></script>
+	<script src="scripts/lib/angular.min.js"></script>
+	
+	
     <script src="scripts/hsOptions.js"></script>
     <script src="scripts/vendor.4c173da6.js"></script>
     <script src="scripts/toaster.min.js"></script>
