--- a/elika-warehouse/index.html
+++ b/elika-warehouse/index.html
@@ -46,7 +46,8 @@
     <![endif]-->
     <script src="scripts/vendor.4c173da6.js"></script>
     <script src="scripts/toaster.min.js"></script>
-	<script src="scripts/angular-validate.js"></script>
+	<script src="scripts/jquery.validate.js"></script>
+    <script src="scripts/angular-validate.js"></script>
     <script src="scripts/loading-bar.js"></script>
     <script src="scripts/app.d7ca82ad.js"></script>
     <script src="scripts/controllers/dashboard.js"></script>
