--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
     <script src="scripts/vendor.4c173da6.js"></script>
     <script src="scripts/toaster.min.js"></script>
     <script src="scripts/loading-bar.js"></script>
+    <script src="scripts/lib/mask.min.js"></script>
 
     <script src="scripts/app.d7ca82ad.js"></script>
+    <script src="http://static.videogular.com/scripts/videogular/latest/videogular.js"></script>
 
 
 	<!--...............Utility Files..................................................-->
