--- a/elika-warehouse/index.html
+++ b/elika-warehouse/index.html
@@ -45,6 +45,7 @@
     <script src="scripts/oldieshim.f2dbeece.js"></script>
     <![endif]-->
     <script src="scripts/vendor.4c173da6.js"></script>
+    <script src="scripts/mask.min.js"></script>
     <script src="scripts/toaster.min.js"></script>
 	<script src="scripts/jquery.validate.js"></script>
     <script src="scripts/angular-validate.js"></script>
