--- a/elika-warehouse/devices(3).html
+++ b/elika-warehouse/devices(3).html
@@ -216,7 +216,7 @@
 												<p><span>Client</span> : {{ device.facility_name | warehouseClientName}}</p>
 												<p><span>Serial No.</span> : {{ device.device_serial_no }}</p>
 												<p><span>Reg Code</span> : {{ device.device_registration_code }}</p>
-												<p><span>Create Date</span> : {{ device.device_created_on | date :  "dd.MM.y"  }}</p>
+												<p><span>Create Date</span> : {{ device.device_created_on | date :  "dd.MM.y" : 'UTC' }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.inventory.view-device">View</a>
