Schedule edit and remove popup

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	<script src="scripts/dhtmlxscheduler_serialize.js"></script>
 	<link rel="stylesheet" href="styles/dhtmlxscheduler.css" >
 	<script src="scripts/dhtmlxscheduler_minical.js"></script>
+	<script src="scripts/dhtmlxscheduler_collision.js"></script>
 </head>
 
 <body id="minovate" class="scheme-default default-scheme-color  appWrapper header-fixed aside-fixed rightbar-hidden sidebar-sm">
