--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 	<script src="scripts/Service/profileSettingsSvc.js"></script>
 
 	<script src="scripts/Service/holidayScheduleSvc.js"></script>
+	<script src="scripts/Service/helpSvc.js"></script>
 
 	<script src="scripts/Service/loginSVC.js"></script>
 	<script src="scripts/Service/administratorSvc.js"></script>
@@ -133,6 +134,7 @@
 
 	<script src="scripts/holidaySchedule.js"></script>
 	<script src="scripts/administrator.js"></script>
+	<script src="scripts/help.js"></script>
 
 
 </body>
