--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<link rel="stylesheet" href="styles/vxgplayer.css">
 	<!-- <link rel="stylesheet" href="styles/screen.css"> -->
 
-
+	<link rel="stylesheet" href="styles/angular-wizard.min.css">
 
 	<script src="scripts/dhtmlxscheduler.js"></script>
 	<script src="scripts/dhtmlxscheduler_serialize.js"></script>
@@ -66,7 +66,7 @@
 
 	<script src="scripts/lib/jquery.min.js"></script>
 	<script src="scripts/lib/angular.min.js"></script>
-
+	<script src="scripts/lib/angular-wizard.min.js"></script>
 
 
 	<script src="scripts/hsOptions.js"></script>
@@ -111,6 +111,7 @@
 
 	<script src="scripts/config.js"></script>
 	<script src="scripts/login.js"></script>
+	<script src="scripts/wizardCtrl.js"></script>
 	<script src="scripts/dashboard.js"></script>
 	<script src="scripts/DeviceMod.js"></script>
 	<script src="scripts/DoorsMod.js"></script>
