--- a/web/contact.html
+++ b/web/contact.html
@@ -165,7 +165,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 	<div class="map-agileits">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24804.011287515073!2d-77.42088058957434!3d39.00387414146245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b6384f20fb61ad%3A0x5bfd0cf0a55864c!2sSterling%2C+VA%2C+USA!5e0!3m2!1sen!2sin!4v1487219294651"></iframe>
+		<iframe src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJezVzMaTlDDkRP8B8yDDO_zc&key=AIzaSyCZhDP2F0Ih6QAmkn3W1BIZBAucXzkQ1vY"></iframe>
 	</div>
 <!-- //contact -->
 <!--footer-->
