student module first draft

--- a/app/student/inbox.html
+++ b/app/student/inbox.html
@@ -55,7 +55,7 @@
               <ul class="nav side-menu">
                 <li><a href="index.html"><i class="fa fa-home"></i> Home </a>
                 </li>
-                <li><a href="students.html"><i class="fa fa-users"></i> Students</a>
+                <li><a href="test_series.html"><i class="fa fa-users"></i> Test Series</a>
                 </li>
                 <li><a href="attendence.html"><i class="fa fa-line-chart"></i> Attendence</a>
                 </li>
