--- a/app/student/login.html
+++ b/app/student/login.html
@@ -31,7 +31,7 @@
         <div class="animate form login_form">
           <section class="login_content">
             <form>
-              <h1>Login Form</h1>
+              <h1> Student Login Form</h1>
               <div>
                 <input type="text" class="form-control" placeholder="Username" required="" />
               </div>
