school module added

--- a/app/school/index.html
+++ b/app/school/index.html
@@ -62,9 +62,9 @@
               <ul class="nav side-menu">
                 <li><a href="index.html"><i class="fa fa-home"></i> Home </a>
                 </li>
-                <li><a href="test_series.html"><i class="fa fa-users"></i> Test Series</a>
+                <li><a href="teacher.html"><i class="fa fa-users"></i> Teacher</a>
                 </li>
-                <li><a href="attendence.html"><i class="fa fa-line-chart"></i> Attendence</a>
+                <li><a href="student.html"><i class="fa fa-users"></i> Student</a>
                 </li>
                 <li><a href="result.html"><i class="fa fa-graduation-cap"></i> Results </a>
                 </li>
@@ -196,22 +196,22 @@
         <!-- top tiles -->
         <div class="row tile_count">
           <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-            <span class="count_top"><i class="fa fa-user"></i> Class Rank</span>
-            <div class="count">5</div>
+            <span class="count_top"><i class="fa fa-user"></i> Total Student</span>
+            <div class="count">532</div>
             <!--<span class="count_bottom"><i class="green">4% </i> From last Week</span>-->
           </div>
           <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-            <span class="count_top"><i class="fa fa-clock-o"></i> Number of Classes</span>
-            <div class="count">134</div>
+            <span class="count_top"><i class="fa fa-clock-o"></i> Total Teacher</span>
+            <div class="count">34</div>
             <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>-->
           </div>
           <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-            <span class="count_top"><i class="fa fa-user"></i> Number of Classmates</span>
-            <div class="count green">35</div>
+            <span class="count_top"><i class="fa fa-user"></i>SMS Send</span>
+            <div class="count green">1387</div>
             <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>-->
           </div>
           <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-            <span class="count_top"><i class="fa fa-user"></i> Practice Paper</span>
+            <span class="count_top"><i class="fa fa-user"></i>Session Completed</span>
             <div class="count">86%</div>
             <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>14% </i> Left</span>
           </div>
@@ -249,43 +249,48 @@
               </div>
               <div class="col-md-3 col-sm-3 col-xs-12 bg-white">
                 <div class="x_title">
-                  <h2>Teachers</h2>
+                  <h2>Top Students</h2>
                   <div class="clearfix"></div>
                 </div>
 
                 <div class="col-md-12 col-sm-12 col-xs-6">
                   <div>
-                    <p>Prateek Singh &nbsp &nbsp
-                      <i class="fa fa-mobile "data-toggle="modal" data-target=".bs-example-modal-sm"></i> &nbsp 9568997343</p>
+                    <p>Prateek Singh</p>
+                    <div class="">
+                      <div class="progress progress_sm" style="width: 76%;">
+                        <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="80">80%</div>
+                      </div>
+                    </div>
                   </div>
                   <div>
-                    <p>Shiv Kumar Sharma &nbsp &nbsp
-                      <i class="fa fa-mobile" data-toggle="modal" data-target=".bs-example-modal-sm"></i> &nbsp 9568997343</p>
-                  </div>
-                </div>
-                <div class="col-md-12 col-sm-12 col-xs-6">
-                  <div>
-                    <p>Prateek Singh &nbsp &nbsp
-                      <i class="fa fa-mobile" data-toggle="modal" data-target=".bs-example-modal-sm"></i> &nbsp 9568997343</p>
-                  </div>
-                  <div>
-                    <p>Shiv Kumar Sharma &nbsp &nbsp
-                      <i class="fa fa-mobile "data-toggle="modal" data-target=".bs-example-modal-sm"></i> &nbsp 9568997343</p>
+                    <p>Shiv Kumar Sharma</p>
+                    <div class="">
+                      <div class="progress progress_sm" style="width: 76%;">
+                        <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="76">76%</div>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-6">
                   <div>
-                    <p>Prateek Singh &nbsp &nbsp
-                      <i class="fa fa-mobile "data-toggle="modal" data-target=".bs-example-modal-sm"></i> &nbsp 9568997343</p>
+                    <p>Krishna Gupta</p>
+                    <div class="">
+                      <div class="progress progress_sm" style="width: 76%;">
+                        <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="74">74%</div>
+                      </div>
+                    </div>
                   </div>
                   <div>
-                    <p>Shiv Kumar Sharma &nbsp &nbsp
-                      <i class="fa fa-mobile "data-toggle="modal" data-target=".bs-example-modal-sm"></i> &nbsp 9568997343</p>
+                    <p>Binu Anand</p>
+                    <div class="">
+                      <div class="progress progress_sm" style="width: 76%;">
+                        <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="70">70%</div>
+                      </div>
+                    </div>
                   </div>
                 </div>
 
               </div>
-
               <div class="clearfix"></div>
             </div>
           </div>
