--- a/app/student/result.html
+++ b/app/student/result.html
@@ -82,6 +82,8 @@
                                 </li>
                                 <li><a href="result.html"><i class="fa fa-graduation-cap"></i> Results </a>
                                 </li>
+                                <li><a href="fee.html"><i class="fa fa-money"></i> Fee </a>
+                                </li>
                                 <li><a href="inbox.html"><i class="fa fa-envelope"></i> Inbox</a>
                                 </li>
                         </div>
