commented two blog and css added

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</section>
 				<div class="clearfix"></div>-->
 	<!--//timer-->
-	<!--</div>-->-->
+	<!--</div>-->
 	<!--<div class="col-md-6 regstr-r-w3-agileits">
 	<div class="form-bg-w3ls">
 		<h3>Fill the register form</h3>
@@ -328,7 +328,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="b-nav">
 						<li><a href="#home">Home</a></li>
 						<li><a href="about.html" >About us</a></li>
-						<li><a href="blog.html">Blog</a></li>
+						<!--<li><a href="blog.html">Blog</a></li>-->
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
