--- a/know_more.html
+++ b/know_more.html
@@ -385,7 +385,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="b-nav">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html" >About us</a></li>
-						<li><a href="blog.html">Blog</a></li>
+						<!--<li><a href="blog.html">Blog</a></li>-->
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
