--- a/app/school/index.html
+++ b/app/school/index.html
@@ -62,15 +62,15 @@
               <ul class="nav side-menu">
                 <li><a href="index.html"><i class="fa fa-home"></i> Home </a>
                 </li>
-                <li><a href="/schoolkit/app/school/#!/teacher"><i class="fa fa-users"></i> Teacher</a>
+                <li><a href="www.schoolkitapp.com/app/schoolkit/app/school/#!/teacher"><i class="fa fa-users"></i> Teacher</a>
                 </li>
-                <li><a href="/schoolkit/app/school/#!/student"><i class="fa fa-users"></i> Student</a>
+                <li><a href="www.schoolkitapp.com/app/schoolkit/app/school/#!/student"><i class="fa fa-users"></i> Student</a>
                 </li>
-                <li><a href="/schoolkit/app/school/#!/result"><i class="fa fa-graduation-cap"></i> Results </a>
+                <li><a href="www.schoolkitapp.com/app/schoolkit/app/school/#!/result"><i class="fa fa-graduation-cap"></i> Results </a>
                 </li>
-                <li><a href="/schoolkit/app/school/#!/fee"><i class="fa fa-money"></i> Fee </a>
+                <li><a href="www.schoolkitapp.com/app/schoolkit/app/school/#!/fee"><i class="fa fa-money"></i> Fee </a>
                 </li>
-                <li><a href="/schoolkit/app/school/#!/inbox"><i class="fa fa-envelope"></i> Inbox</a>
+                <li><a href="www.schoolkitapp.com/app/schoolkit/app/school/#!/inbox"><i class="fa fa-envelope"></i> Inbox</a>
                 </li>
             </div>
           </div>
