--- a/app/school/login.html
+++ b/app/school/login.html
@@ -39,7 +39,7 @@
                 <input type="password" class="form-control" placeholder="Password" required="" />
               </div>
               <div>
-                <a class="btn btn-default submit" href="/schoolkit/app/school/#!/">Log in</a>
+                <a class="btn btn-default submit" href="www.schoolkitapp.com/app/schoolkit/app/school/#!/">Log in</a>
                 <a class="reset_pass" href="#">Lost your password?</a>
               </div>
 
