submit name added

--- a/know_more.html
+++ b/know_more.html
@@ -224,7 +224,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 						<textarea placeholder="Your Message" name="Message" required=""></textarea>
 						
-							<input type="submit" value="SEND" >
+							<input type="submit" value="SEND"  name="send">
 						
 				</form>
 			</div>
