--- a/app/school/index.html
+++ b/app/school/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>School Kit | </title>
-
+  <link rel="stylesheet" href="https://unpkg.com/angular-toastr/dist/angular-toastr.css" />
   <!-- Bootstrap -->
   <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
@@ -30,7 +30,7 @@
   <link href="../build/css/custom.min.css" rel="stylesheet">
 </head>
 
-<body class="nav-md" ng-app="schoolKitApp">
+<body class="nav-md" ng-app="schoolKitApp" ng-controller="appCtrl">
   <div class="container body">
     <div class="main_container">
       <div class="col-md-3 left_col">
@@ -87,7 +87,7 @@
             <a data-toggle="tooltip" data-placement="top" title="Lock">
               <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </a>
-            <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
+            <a data-toggle="tooltip" data-placement="top" title="Logout" ng-click="logout()">
               <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
             </a>
           </div>
@@ -117,7 +117,7 @@
                     </a>
                   </li>
                   <li><a href="javascript:;">Help</a></li>
-                  <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                  <li><a ng-click="logout()"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                 </ul>
               </li>
 
@@ -191,7 +191,7 @@
       </div>
       <!-- /top navigation -->
 
-<div ng-view></div>
+      <div ng-view></div>
       <!-- footer content -->
       <footer>
         <div class="pull-right">
@@ -248,6 +248,7 @@
   <script type="text/javascript" src="angular/angular.min.js"></script>
   <script type="text/javascript" src="angular/angular-route.min.js"></script>
   <script type="text/javascript" src="angular/app.js"></script>
+  <script type="text/javascript" src="angular/appCtrl.js"></script>
   <script type="text/javascript" src="https://unpkg.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
 
 </body>
