--- a/app/school/login.html
+++ b/app/school/login.html
@@ -214,14 +214,21 @@
                 <div>
                   <input type="number" class="form-control" placeholder="Number of student" ng-model="number_of_student" />
                 </div>
+                <br>
                 <div>
                   <input type="number" class="form-control" placeholder="Number Of months" ng-model="number_of_months" />
                 </div>
+                <br>
                 <div>
-                  <input type="number" class="form-control" placeholder="Amount" ng-model="amount" />
+                  <input type="number" class="form-control" placeholder="Package" ng-model="amount" ng-blur="calculateAmount()"/>
                 </div>
+                <br>
+                 <div>
+                  <input type="number" class="form-control" placeholder="Amount" ng-model="totalAmount" ng-disabled="true" />
+                </div>
+                <br>
                 <div>
-                  <input type="submit" ng-click="signup()" value="Signup" />
+                  <input type="submit" class="btn btn-success" ng-click="signup()" value="Signup" />
                 </div>
                 </form>
               </div>
