--- a/app/school/login.html
+++ b/app/school/login.html
@@ -104,10 +104,10 @@
               <input type="text" class="form-control" placeholder="OTP" ng-model="otp" />
             </div>
             <div>
-              <input type="text" class="form-control" placeholder="Password" ng-model="password" />
+              <input type="password" class="form-control" placeholder="Password" ng-model="password" />
             </div>
             <div>
-              <input type="text" class="form-control" placeholder="Confirm Password" ng-model="confirm_password" />
+              <input type="password" class="form-control" placeholder="Confirm Password" ng-model="confirm_password" />
             </div>
             <div>
               <a ng-click="checkOtp()" class="btn btn-default submit">Change Password</a>
