--- a/app/school/index.html
+++ b/app/school/index.html
@@ -67,7 +67,7 @@
                 </li>
                 <li><a href="http://www.merikitab.in/schoolkit/app/school/#!/student"><i class="fa fa-users"></i> Student</a>
                 </li>
-                <li><a href="http://www.merikitab.in/schoolkit/app/school/#!/teacher"><i class="fa fa-users"></i> Teacer</a>
+                <li><a href="http://www.merikitab.in/schoolkit/app/school/#!/teacher"><i class="fa fa-users"></i> Teacher</a>
                 </li>
                 <li><a href="http://www.merikitab.in/schoolkit/app/school/#!/class"><i class="fa fa-book"></i> Class </a>
                 </li>
