--- a/app/teacher/index.html
+++ b/app/teacher/index.html
@@ -59,7 +59,7 @@
           </div>
           <!-- /menu profile quick info -->
 
-          <br />
+          <br /> 
 
           <!-- sidebar menu -->
           <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
@@ -237,6 +237,7 @@
   <script src="../vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
   <script src="../vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
   <script src="../vendors/flot.curvedlines/curvedLines.js"></script>
+  <script src="../vendors/jquery.inputmask/dist/min/jquery.inputmask.bundle.min.js"></script>
   <!-- DateJS -->
   <script src="../vendors/DateJS/build/date.js"></script>
   <!-- JQVMap -->
