--- a/app/teacher/index.html
+++ b/app/teacher/index.html
@@ -40,7 +40,7 @@
       <div class="col-md-3 left_col">
         <div class="left_col scroll-view">
           <div class="navbar nav_title" style="border: 0;">
-            <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Kendriya Vidayalaya</span></a>
+            <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>{{schoolName}}</span></a>
           </div>
 
           <div class="clearfix"></div>
@@ -52,7 +52,7 @@
             </div>
             <div class="profile_info">
               <span>Welcome,</span>
-              <h2>Vikas Sharma</h2>
+              <h2>{{teacherName}}</h2>
               <select class="form-control" ng-model="selectedClass" ng-change="callFunctions(selectedClass)" ng-options="classesData.class_name for classesData in classes track by classesData.class_id">
               </select>
             </div>
@@ -103,7 +103,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li class="">
                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                  <img src="images/img.jpg" alt="">Vikas Sharma
+                  <img src="images/img.jpg" alt="">{{teacherName}}
                   <span class=" fa fa-angle-down"></span>
                 </a>
                 <ul class="dropdown-menu dropdown-usermenu pull-right">
